syntax = "proto3";

option csharp_namespace = "grpcBidirectionalClient";

package BidirectionalStream;

service BidirectionalStream {
  rpc SendMessage (stream MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}